@@ -1,5 +1,7 @@
 package com.example.demo.schedule.service.impl;
 
+import com.example.demo.exception.InvalidRequestException;
+import com.example.demo.exception.ResourceNotFoundException;
 import com.example.demo.model.Schedule;
 import com.example.demo.schedule.dto.ScheduleCreateRequest;
 import com.example.demo.schedule.dto.ScheduleDTO;
@@ -7,13 +9,12 @@ import com.example.demo.schedule.dto.ScheduleUpdateRequest;
 import com.example.demo.schedule.service.ScheduleService;
 import com.example.demo.repository.ScheduleRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.dao.EmptyResultDataAccessException;
+import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.web.util.HtmlUtils;
-import org.springframework.jdbc.core.JdbcTemplate;
-import org.springframework.dao.EmptyResultDataAccessException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,13 +27,13 @@ public class ScheduleServiceImpl implements ScheduleService {
     public List<ScheduleDTO> getAllSchedules() {
         return scheduleRepository.findAll().stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public ScheduleDTO getScheduleById(Long id) {
         Schedule schedule = scheduleRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Schedule not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Schedule not found with id: " + id));
         return toDto(schedule);
     }
 
@@ -40,45 +41,33 @@ public class ScheduleServiceImpl implements ScheduleService {
     public List<ScheduleDTO> getSchedulesByUserId(Long userId) {
         return scheduleRepository.findByUserId(userId).stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<ScheduleDTO> getSchedulesByProductId(Long productId) {
         return scheduleRepository.findByProductId(productId).stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public ScheduleDTO createSchedule(ScheduleCreateRequest request) {
-        // Validate if the user exists
         Long userId = request.getUserId();
-        if (userId != null) {
-            try {
-                jdbcTemplate.queryForObject("SELECT id FROM users WHERE id = ?", Long.class, userId);
-            } catch (EmptyResultDataAccessException e) {
-                throw new RuntimeException("User not found with id: " + userId);
-            }
-        } else {
-            throw new RuntimeException("User ID cannot be null for schedule creation.");
+        if (userId == null) {
+            throw new InvalidRequestException("User ID cannot be null for schedule creation.");
         }
+        validateUserExists(userId);
 
-        // Validate if the product exists
         Long productId = request.getProductId();
-        if (productId != null) {
-            try {
-                jdbcTemplate.queryForObject("SELECT id FROM products WHERE id = ?", Long.class, productId);
-            } catch (EmptyResultDataAccessException e) {
-                throw new RuntimeException("Product not found with id: " + productId);
-            }
-        } else {
-            throw new RuntimeException("Product ID cannot be null for schedule creation.");
+        if (productId == null) {
+            throw new InvalidRequestException("Product ID cannot be null for schedule creation.");
         }
+        validateProductExists(productId);
 
         Schedule schedule = new Schedule();
-        schedule.setUserId(request.getUserId());
-        schedule.setProductId(request.getProductId());
+        schedule.setUserId(userId);
+        schedule.setProductId(productId);
         schedule.setCronExpr(HtmlUtils.htmlEscape(request.getCronExpr()));
         schedule.setChannel(HtmlUtils.htmlEscape(request.getChannel()));
 
@@ -89,7 +78,7 @@ public class ScheduleServiceImpl implements ScheduleService {
     @Override
     public ScheduleDTO updateSchedule(Long id, ScheduleUpdateRequest request) {
         Schedule schedule = scheduleRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Schedule not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Schedule not found with id: " + id));
 
         if (request.getCronExpr() != null) {
             schedule.setCronExpr(HtmlUtils.htmlEscape(request.getCronExpr()));
@@ -98,13 +87,7 @@ public class ScheduleServiceImpl implements ScheduleService {
             schedule.setChannel(HtmlUtils.htmlEscape(request.getChannel()));
         }
         if (request.getProductId() != null) {
-            // Validate if the product exists
-            Long productId = request.getProductId();
-            try {
-                jdbcTemplate.queryForObject("SELECT id FROM products WHERE id = ?", Long.class, productId);
-            } catch (EmptyResultDataAccessException e) {
-                throw new RuntimeException("Product not found with id: " + productId);
-            }
+            validateProductExists(request.getProductId());
             schedule.setProductId(request.getProductId());
         }
 
@@ -115,9 +98,25 @@ public class ScheduleServiceImpl implements ScheduleService {
     @Override
     public void deleteSchedule(Long id) {
         if (!scheduleRepository.existsById(id)) {
-            throw new RuntimeException("Schedule not found with id: " + id);
+            throw new ResourceNotFoundException("Schedule not found with id: " + id);
         }
         scheduleRepository.deleteById(id);
+    }
+
+    private void validateUserExists(Long userId) {
+        try {
+            jdbcTemplate.queryForObject("SELECT id FROM users WHERE id = ?", Long.class, userId);
+        } catch (EmptyResultDataAccessException e) {
+            throw new ResourceNotFoundException("User not found with id: " + userId);
+        }
+    }
+
+    private void validateProductExists(Long productId) {
+        try {
+            jdbcTemplate.queryForObject("SELECT id FROM products WHERE id = ?", Long.class, productId);
+        } catch (EmptyResultDataAccessException e) {
+            throw new ResourceNotFoundException("Product not found with id: " + productId);
+        }
     }
 
     private ScheduleDTO toDto(Schedule schedule) {
